--- a/app/src/main/rust/Cargo.toml
+++ b/app/src/main/rust/Cargo.toml
@@ -12,3 +12,5 @@ jni = "0.21.1"
 libloading = "0.8.5"
 log = "0.4.22"
 rust-embed = { version = "8.5.0", features = ["debug-embed"] }
+log-panics = { version = "2", features = ["with-backtrace"]}
+
