--- a/app/src/main/rust/Cargo.toml
+++ b/app/src/main/rust/Cargo.toml
@@ -13,4 +13,6 @@ libloading = "0.8.5"
 log = "0.4.22"
 rust-embed = { version = "8.5.0", features = ["debug-embed"] }
 log-panics = { version = "2", features = ["with-backtrace"]}
+tokio = { version = "1.39.3", features = ["full"] }
+tokio-util = { version = "0.7.11", features = ["rt"] }
 
